--- a/index.html
+++ b/index.html
@@ -44,45 +44,64 @@
 </table>
 
 
-<h2>Bio.</h2>
 <p style="text-align:justify";>
 	I am a first-year PhD student at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a>, 
-	under the supervision of Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Wenjie Li</a>.
+	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
+	Previously, I was a visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a> 
+	from 2018 to 2019, advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>.
 	I received my M.Eng. degree and B.Eng. degree from the School of Computer Science and Engineering, 
 	<a href="https://www.scut.edu.cn/en/">South China University of Technology (SCUT)</a> in 2020 and 2017, respectively. 
-	Previously, I was a visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a> 
-	from Aug. 2018 to Sep. 2019, supervised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>.
+</p>
+
+
+<h2>Research</h2>
+<p style="text-align:justify";>
+	I have broad interests in natural language processing (NLP), particularly in <b>dialogue systems</b> and <b>natural language generation</b>. 
+	My research is mostly driven by two goals:
+	<ul>
+	<li> Building practical and intelligent dialogue systems. I am excited about simple and principled approaches that can 
+		be generalizable to real-world scenarios.
+	</li>
+	<li> Developing effective and fundamental methods for natural language generation. I am specifically interested in how human knowledge
+		(e.g., factual, commonsense, etc.) can be represented, reasoned, and finally used in natural language generation.
+	</li>
+	</ul>
 </p>
 <p style="text-align:justify";>
-	My research interests mainly lie in <b>Natural Language Processing (NLP)</b>, 
-	with special emphasis on <b>dialogue systems</b>, <b>natural language generation</b>, and <b>knowledge graph</b>. 
-	Recently, I am dedicated to knowledge enhanced dialogue and recommendation oriented dialogue.
-</p>
+	Recently, I am dedicated to target-guided proactive dialogue systems towards recommendations.
 
 <h2> Experience </h2>
 <ul>
-	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-			2020.11 -- 2021.08: Research assistant at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a> <br>
-			Supervisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Wenjie Li</a></p>
+	<li> 
+		2020.11 - 2021.08: Research assistant at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University</a>
+		(Advisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Maggie Wenjie Li</a>)
 	</li>
-	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-		    2020.07 -- 2020.10: Research intern at <a href="https://rul.ai/">Rulai Inc.</a> <br>
-		    Supervisor: Dr. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a></p>
+	<li> 
+		2020.07 - 2020.10: Research intern at <a href="https://rul.ai/">Rulai Inc.</a>
+		(Advisor: Dr. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>)
     </li>
-    <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-			2018.08 -- 2019.09: Visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a><br>
-			Supervisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a></p> 
+    <li> 
+		2018.08 - 2019.09: Visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a>
+		(Advisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>)
 	</li>
 </ul>
+
 
 <h2> Publications </h2>
 <p><b>2021</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
+		Target-guided Knowledge-aware Recommendation Dialogue System: An Empirical Investigation <br> 
+		Dongding Lin, <b>Jian Wang</b>, and Wenjie Li. <br> 
+		<i>3rd Knowledge-aware and Conversational Recommender Systems (KaRS) Workshop @ RecSys 2021</i>. <br>
+		[<a href="https://iwangjian.github.io/pdf/KaRS.lin.pdf">PDF</a>] 
+	    </p> 
+    </li>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
 		Template-guided Clarifying Question Generation for Web Search Clarification <br> 
 		<b>Jian Wang</b> and Wenjie Li. <br> 
 		<i>Proceedings of the 30th ACM International Conference on Information and Knowledge Management</i> (<b>CIKM'21</b>). <br>
-		[<a href="https://iwangjian.github.io/pdf/CIKM21_TG-ClariQ.pdf">PDF</a>]
+		[<a href="https://iwangjian.github.io/pdf/CIKM2021.wang.pdf">PDF</a>]
 		[<a href="https://github.com/iwangjian/TG-ClariQ">code</a>] 
 	    </p> 
     </li>
@@ -93,7 +112,7 @@
 		<a href="https://www.aclweb.org/anthology/2020.coling-main.362/">Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems</a> <br> 
 		<b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 		<i>Proceedings of the 28th International Conference on Computational Linguistics</i> (<b>COLING'20</b>). <br>
-		[<a href="https://iwangjian.github.io/pdf/COLING20_DDMN.pdf">PDF</a>]
+		[<a href="https://iwangjian.github.io/pdf/COLING2020.wang.pdf">PDF</a>]
 		[<a href="https://github.com/siat-nlp/DDMN">code</a>] 
 	    </p> 
     </li>
@@ -102,7 +121,7 @@
             <b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 	        <i>Proceedings of the 34th AAAI Conference on Artificial Intelligence</i> (<b>AAAI'20</b>). <br>
 			[<a href="https://arxiv.org/abs/1912.07491">arXiv</a>]
-			[<a href="https://iwangjian.github.io/pdf/AAAI20_TransDG.pdf">PDF</a>]
+			[<a href="https://iwangjian.github.io/pdf/AAAI2020.wang.pdf">PDF</a>]
 		    [<a href="https://github.com/siat-nlp/TransDG">code</a>] 
 	    </p> 
 	</li>	
@@ -110,15 +129,11 @@
             <a href="https://doi.org/10.1007/s13042-020-01133-3">Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</a> <br> 
             <b>Jian Wang</b>, Kejing He, and Min Yang.<br> 
 	        <i>International Journal of Machine Learning and Cybernetics</i> (<b>JMLC</b>), 2020. <br>
-			[<a href="https://doi.org/10.1007/s13042-020-01133-3">paper</a>]
-			[<a href="https://iwangjian.github.io/pdf/JMLC20_CETM.pdf">PDF</a>]
+			[<a href="https://iwangjian.github.io/pdf/JMLC2020.wang.pdf">PDF</a>]
 	    </p> 
 	</li>
 
 </ul>
-
-
-
 
 
 <h2>Honors / Awards </h2>
@@ -206,7 +221,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last updated: Aug. 15, 2021
+        <br> &copy; Jian Wang | Last update: Sep. 4, 2021
 		</center>
 	</p>		
 </div>
