--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		Target-guided Knowledge-aware Recommendation Dialogue System: An Empirical Investigation <br> 
 		Dongding Lin, <b>Jian Wang</b>, and Wenjie Li. <br> 
 		<i>3rd Knowledge-aware and Conversational Recommender Systems (KaRS) Workshop @ RecSys 2021</i>. <br>
-		[<a href="https://iwangjian.github.io/pdf/KaRS.lin.pdf">PDF</a>] 
+		[<a href="https://iwangjian.github.io/pdf/KaRS2021.lin.pdf">PDF</a>]
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
