--- a/index.html
+++ b/index.html
@@ -162,44 +162,42 @@
 
 
 <h2>Professional Activities </h2>
-<ul style="list-style-type:none"> 
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-			  <strong> Teaching </strong> <br> 
-		</p>
-		<p style="margin-left: 20px; line-height: 140%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-			Teaching Assistant for <i>COMP 2021: Object-Oriented Programming</i>, Fall 2021, PolyU <br>
-			Teaching Assistant for <i>Design and Analysis of Algorithm</i>, Spring 2018, SCUT <br>
-			Teaching Assistant for <i>Advanced Language Program Design (C++)</i>, Fall 2017, SCUT
-		</p> 
-    </li>
+<p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
+	<strong> Teaching </strong> <br> 
+</p>
+	<ul style="list-style-type:none">
+		<li>Teaching Assistant for <i>COMP 2021: Object-Oriented Programming</i>, Fall 2021, PolyU</li>
+		<li>Teaching Assistant for <i>Design and Analysis of Algorithm</i>, Spring 2018, SCUT</li>
+		<li>Teaching Assistant for <i>Advanced Language Program Design (C++)</i>, Fall 2017, SCUT</li>
+	</ul>
 	
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-              <strong>  Conference Reviewer </strong> <br> </p> 
-	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-		  EMNLP'21, COLING'20
-	      </p>
-    </li>
+<p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
+    <strong>  Conference Reviewer </strong> <br> 
+</p>
+	<ul style="list-style-type:none">
+		<li>EMNLP'21, COLING'20</li>
+	</ul>
 	
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-              <strong> Open-Source Projects </strong> <br>
-		</p>
-		<p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-			<a href="https://github.com/iwangjian/Paper-Reading">📖 Paper-Reading</a>: Reading list in NLP, including dialogue systems, text generation, and related topics. <br>
-			<a href="https://github.com/iwangjian/pyloader">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets, supporting PyTorch and TensorFlow. 
-		</p> 
-	</li>
-</ul>
+<p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
+    <strong> Open-Source Projects </strong> <br>
+</p>
+	<ul style="list-style-type:none">
+		<li><a href="https://github.com/iwangjian/Paper-Reading">📖 Paper-Reading</a>: Reading list in NLP, including dialogue systems, text generation, and related topics.</li>
+		<li><a href="https://github.com/iwangjian/pyloader">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets, supporting PyTorch and TensorFlow. </li>
+	</ul>
+
 
 <h2>Useful Resources</h2>
 <ul style="list-style-type:none">
-<p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;"><meta charset="utf-8">
+
 	<li> <a href="https://aideadlin.es/?sub=ML,NLP,DM">⏳ AI Conference Deadlines</a>: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines. </li>
-	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality">👩‍🎓👨‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI. </li>
 	<li> <a href="https://www.bilibili.com/video/BV18v411n7mr">📝 Writing Perfect Papers</a>: A long talk on how to write perfect papers (by Prof. Baochun Li @UofT). </li>
 	<li> <a href="https://ruder.io/">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog about NLP/ML/DL.</li>
-	<li> <a href="https://jalammar.github.io/">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
 	<li> <a href="https://lilianweng.github.io/lil-log/">🍑 Lilian Weng's Blog</a>: Deep insights for many DL/NLP problems.</li>
-</p>
+	<li> <a href="https://jalammar.github.io/">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
+	<li> <a href="https://kexue.fm/">📡 Scientific Spaces</a>: Jianlin Su's blog (in Chinese) about ML|NLP theories with deep explorations.</li>
+	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality">👩‍🎓👨‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI. </li>
+	
 </ul>
 
 <h2> Misc. </h2>
