--- a/index.html
+++ b/index.html
@@ -90,34 +90,35 @@
 <h2> Publications </h2>
 <p><b>2021</b></p>
 <ul>
-	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-		Target-guided Knowledge-aware Recommendation Dialogue System: An Empirical Investigation <br> 
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<a href="http://ceur-ws.org/Vol-2960/paper7.pdf" target="_blank">Target-guided Knowledge-aware Recommendation Dialogue System: An Empirical Investigation</a><br> 
 		Dongding Lin, <b>Jian Wang</b>, and Wenjie Li. <br> 
 		<i>3rd Knowledge-aware and Conversational Recommender Systems (KaRS) Workshop @ RecSys 2021</i>. <br>
 		[<a href="https://iwangjian.github.io/pdf/KaRS2021.lin.pdf">PDF</a>]
 	    </p> 
     </li>
-	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-		Template-guided Clarifying Question Generation for Web Search Clarification <br> 
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<a href="https://dl.acm.org/doi/10.1145/3459637.3482199" target="_blank">Template-guided Clarifying Question Generation for Web Search Clarification </a><br> 
 		<b>Jian Wang</b> and Wenjie Li. <br> 
 		<i>Proceedings of the 30th ACM International Conference on Information and Knowledge Management</i> (<b>CIKM'21</b>). <br>
 		[<a href="https://iwangjian.github.io/pdf/CIKM2021.wang.pdf">PDF</a>]
+		[<a href="https://iwangjian.github.io/pdf/CIKM2021.slides.pdf">slides</a>]
 		[<a href="https://github.com/iwangjian/TG-ClariQ">code</a>] 
 	    </p> 
     </li>
 </ul>
 <p><b>2020</b></p>
 <ul>
-	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-		<a href="https://www.aclweb.org/anthology/2020.coling-main.362/">Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems</a> <br> 
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<a href="https://www.aclweb.org/anthology/2020.coling-main.362/" target="_blank">Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems</a> <br> 
 		<b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 		<i>Proceedings of the 28th International Conference on Computational Linguistics</i> (<b>COLING'20</b>). <br>
 		[<a href="https://iwangjian.github.io/pdf/COLING2020.wang.pdf">PDF</a>]
 		[<a href="https://github.com/siat-nlp/DDMN">code</a>] 
 	    </p> 
     </li>
-    <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-            <a href="https://aaai.org/ojs/index.php/AAAI/article/view/6453">Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering</a> <br> 
+    <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+            <a href="https://aaai.org/ojs/index.php/AAAI/article/view/6453" target="_blank">Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering</a> <br> 
             <b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 	        <i>Proceedings of the 34th AAAI Conference on Artificial Intelligence</i> (<b>AAAI'20</b>). <br>
 			[<a href="https://arxiv.org/abs/1912.07491">arXiv</a>]
@@ -125,8 +126,8 @@
 		    [<a href="https://github.com/siat-nlp/TransDG">code</a>] 
 	    </p> 
 	</li>	
-    <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-            <a href="https://doi.org/10.1007/s13042-020-01133-3">Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</a> <br> 
+    <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+            <a href="https://doi.org/10.1007/s13042-020-01133-3" target="_blank">Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</a> <br> 
             <b>Jian Wang</b>, Kejing He, and Min Yang.<br> 
 	        <i>International Journal of Machine Learning and Cybernetics</i> (<b>JMLC</b>), 2020. <br>
 			[<a href="https://iwangjian.github.io/pdf/JMLC2020.wang.pdf">PDF</a>]
@@ -202,11 +203,11 @@
 
 <h2> Misc. </h2>
 <ul>
-    <li> <p><meta charset="utf-8">
+    <li> <p>
 		  I enjoy Chinese calligraphy and most of outdoor sports (especially basketball, table tennis, badminton). I also 
 		  spend a lot of time on reading and movies. </p> 
 	</li>
-	<li> <p><meta charset="utf-8">
+	<li> <p>
 		I dream to travel around China, I also dream to travel around the world someday.</p> 
 	</li>
 </ul>
@@ -220,7 +221,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last update: Sep. 4, 2021
+        <br> &copy; Jian Wang | Last update: Nov. 2, 2021
 		</center>
 	</p>		
 </div>
