--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<h3>PhD Student</h3>
 				<p>
-					PQ719, Department of Computing, <br>
+					QT418, Department of Computing, <br>
 					The Hong Kong Polytechnic University, <br>
 					Hung Hom, Kowloon, Hong Kong, China <br>
 					<br>
