--- a/index.html
+++ b/index.html
@@ -164,12 +164,13 @@
 
 <h2>Professional Activities </h2>
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
-	<strong> Teaching </strong> <br> 
+	<strong> Teaching Assistant</strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>Teaching Assistant for <i>COMP 2021: Object-Oriented Programming</i>, Fall 2021, PolyU</li>
-		<li>Teaching Assistant for <i>Design and Analysis of Algorithm</i>, Spring 2018, SCUT</li>
-		<li>Teaching Assistant for <i>Advanced Language Program Design (C++)</i>, Fall 2017, SCUT</li>
+		<li>TA for <i>COMP 6709: Advanced Natural Language Processing</i>, Spring 2022, PolyU</li>
+		<li>TA for <i>COMP 2021: Object-Oriented Programming</i>, Fall 2021, PolyU</li>
+		<li>TA for <i>Design and Analysis of Algorithm</i>, Spring 2018, SCUT</li>
+		<li>TA for <i>Advanced Language Program Design (C++)</i>, Fall 2017, SCUT</li>
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
@@ -221,7 +222,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last update: Nov. 2, 2021
+        <br> &copy; Jian Wang | Last update: Jan. 12, 2022
 		</center>
 	</p>		
 </div>
