--- a/index.html
+++ b/index.html
@@ -91,45 +91,46 @@
 <p><b>2021</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		<a href="http://ceur-ws.org/Vol-2960/paper7.pdf" target="_blank">Target-guided Knowledge-aware Recommendation Dialogue System: An Empirical Investigation</a><br> 
+		Target-guided Knowledge-aware Recommendation Dialogue System: An Empirical Investigation.<br> 
 		Dongding Lin, <b>Jian Wang</b>, and Wenjie Li. <br> 
-		<i>3rd Knowledge-aware and Conversational Recommender Systems (KaRS) Workshop @ RecSys 2021</i>. <br>
-		[<a href="https://iwangjian.github.io/pdf/KaRS2021.lin.pdf">PDF</a>]
+		<i>Knowledge-aware and Conversational Recommender Systems (KaRS) Workshop @ RecSys, 2021.</i> <br>
+		[<a href="http://ceur-ws.org/Vol-2960/paper7.pdf">paper</a>]
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		<a href="https://dl.acm.org/doi/10.1145/3459637.3482199" target="_blank">Template-guided Clarifying Question Generation for Web Search Clarification </a><br> 
+		Template-guided Clarifying Question Generation for Web Search Clarification.<br> 
 		<b>Jian Wang</b> and Wenjie Li. <br> 
-		<i>Proceedings of the 30th ACM International Conference on Information and Knowledge Management</i> (<b>CIKM'21</b>). <br>
-		[<a href="https://iwangjian.github.io/pdf/CIKM2021.wang.pdf">PDF</a>]
+		<i>ACM International Conference on Information and Knowledge Management (CIKM), 2021.</i> <br>
+		[<a href="https://dl.acm.org/doi/10.1145/3459637.3482199">paper</a>]
 		[<a href="https://iwangjian.github.io/pdf/CIKM2021.slides.pdf">slides</a>]
-		[<a href="https://github.com/iwangjian/TG-ClariQ">code</a>] 
+		[<a href="https://github.com/iwangjian/TG-ClariQ">code</a>]
 	    </p> 
     </li>
 </ul>
 <p><b>2020</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		<a href="https://www.aclweb.org/anthology/2020.coling-main.362/" target="_blank">Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems</a> <br> 
+		Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems. <br> 
 		<b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
-		<i>Proceedings of the 28th International Conference on Computational Linguistics</i> (<b>COLING'20</b>). <br>
-		[<a href="https://iwangjian.github.io/pdf/COLING2020.wang.pdf">PDF</a>]
+		<i>International Conference on Computational Linguistics (COLING), 2020.</i> <br>
+		[<a href="https://www.aclweb.org/anthology/2020.coling-main.362">paper</a>]
 		[<a href="https://github.com/siat-nlp/DDMN">code</a>] 
 	    </p> 
     </li>
     <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-            <a href="https://aaai.org/ojs/index.php/AAAI/article/view/6453" target="_blank">Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering</a> <br> 
+            Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering.<br> 
             <b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
-	        <i>Proceedings of the 34th AAAI Conference on Artificial Intelligence</i> (<b>AAAI'20</b>). <br>
+	        <i>AAAI Conference on Artificial Intelligence (AAAI), 2020.</i> <br>
 			[<a href="https://arxiv.org/abs/1912.07491">arXiv</a>]
-			[<a href="https://iwangjian.github.io/pdf/AAAI2020.wang.pdf">PDF</a>]
+			[<a href="https://aaai.org/ojs/index.php/AAAI/article/view/6453">paper</a>]
 		    [<a href="https://github.com/siat-nlp/TransDG">code</a>] 
 	    </p> 
 	</li>	
     <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-            <a href="https://doi.org/10.1007/s13042-020-01133-3" target="_blank">Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</a> <br> 
+            Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts. <br> 
             <b>Jian Wang</b>, Kejing He, and Min Yang.<br> 
-	        <i>International Journal of Machine Learning and Cybernetics</i> (<b>JMLC</b>), 2020. <br>
+	        <i>International Journal of Machine Learning and Cybernetics (JMLC), 2020.</i> <br>
+			[<a href="https://doi.org/10.1007/s13042-020-01133-3">paper</a>]
 			[<a href="https://iwangjian.github.io/pdf/JMLC2020.wang.pdf">PDF</a>]
 	    </p> 
 	</li>
@@ -174,7 +175,7 @@
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
-    <strong>  Conference Reviewer </strong> <br> 
+    <strong>  Conference Reviews </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
 		<li>EMNLP'21, COLING'20</li>
@@ -184,7 +185,7 @@
     <strong> Open-Source Projects </strong> <br>
 </p>
 	<ul style="list-style-type:none">
-		<li><a href="https://github.com/iwangjian/Paper-Reading">📖 Paper-Reading</a>: Reading list in NLP, including dialogue systems, text generation, and related topics.</li>
+		<li><a href="https://github.com/iwangjian/Paper-Reading">📖 Paper-Reading</a>: Reading list in dialogue systems, natural language generation and relevant topics.</li>
 		<li><a href="https://github.com/iwangjian/pyloader">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets, supporting PyTorch and TensorFlow. </li>
 	</ul>
 
@@ -192,13 +193,13 @@
 <h2>Useful Resources</h2>
 <ul style="list-style-type:none">
 
-	<li> <a href="https://aideadlin.es/?sub=ML,NLP,DM">⏳ AI Conference Deadlines</a>: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines. </li>
-	<li> <a href="https://www.bilibili.com/video/BV18v411n7mr">📝 Writing Perfect Papers</a>: A long talk on how to write perfect papers (by Prof. Baochun Li @UofT). </li>
-	<li> <a href="https://ruder.io/">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog about NLP/ML/DL.</li>
-	<li> <a href="https://lilianweng.github.io/lil-log/">🍑 Lilian Weng's Blog</a>: Deep insights for many DL/NLP problems.</li>
-	<li> <a href="https://jalammar.github.io/">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
-	<li> <a href="https://kexue.fm/">📡 Scientific Spaces</a>: Jianlin Su's blog (in Chinese) about ML|NLP theories with deep explorations.</li>
-	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality">👩‍🎓👨‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI. </li>
+	<li> <a href="https://aideadlin.es/?sub=ML,NLP,DM" target="_blank">⏳ AI Conference Deadlines</a>: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines. </li>
+	<li> <a href="https://www.bilibili.com/video/BV18v411n7mr" target="_blank">📝 Writing Perfect Papers</a>: A long talk on how to write perfect papers (by Prof. Baochun Li @UofT). </li>
+	<li> <a href="https://ruder.io/" target="_blank">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog about NLP/ML/DL.</li>
+	<li> <a href="https://lilianweng.github.io/lil-log/" target="_blank">🍑 Lilian Weng's Blog</a>: Deep insights for many DL/NLP problems.</li>
+	<li> <a href="https://jalammar.github.io/" target="_blank">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
+	<li> <a href="https://kexue.fm/" target="_blank">📡 Scientific Spaces</a>: Jianlin Su's blog (in Chinese) about ML|NLP theories with deep explorations.</li>
+	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality" target="_blank">👩‍🎓👨‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI. </li>
 	
 </ul>
 
