--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 	<li> <a href="https://lilianweng.github.io/lil-log/" target="_blank">🍑 Lilian Weng's Blog</a>: Deep insights for many DL/NLP problems.</li>
 	<li> <a href="https://jalammar.github.io/" target="_blank">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
 	<li> <a href="https://kexue.fm/" target="_blank">📡 Scientific Spaces</a>: Jianlin Su's blog (in Chinese) about ML|NLP theories with deep explorations.</li>
-	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality" target="_blank">👩‍🎓👨‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI. </li>
+	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality" target="_blank">👩‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI. </li>
 	
 </ul>
 
