--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <strong>  Conference Reviews </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>EMNLP'21, COLING'20</li>
+		<li>COLING'22, EMNLP'21, COLING'20</li>
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
