--- a/index.html
+++ b/index.html
@@ -57,18 +57,19 @@
 <h2>Research</h2>
 <p style="text-align:justify";>
 	I have broad interests in natural language processing (NLP), particularly in <b>dialogue systems</b> and <b>natural language generation</b>. 
-	My research is mostly driven by two goals:
+	As two long-term goals, I expect to achieve:
 	<ul>
-	<li> Building practical and intelligent dialogue systems. I am excited about simple and principled approaches that can 
-		be generalizable to real-world scenarios.
+	<li> Building practical and intelligent dialogue systems. I am excited about simple and effective approaches that can 
+		be generalizable to real-world conversation scenarios.
 	</li>
-	<li> Developing effective and fundamental methods for natural language generation. I am specifically interested in how human knowledge
-		(e.g., factual, commonsense, etc.) can be represented, reasoned, and finally used in natural language generation.
+	<li> Developing principled and fundamental methods for natural language generation. I am interested in how human knowledge
+		(e.g., factual, commonsense, etc.) can be reasoned and used in natural language generation.
 	</li>
 	</ul>
 </p>
 <p style="text-align:justify";>
-	Recently, I am dedicated to target-guided proactive dialogue systems towards recommendations.
+	Recently, I am dedicated to target-driven dialogue systems, with the objective of endowing a system with the ability to 
+	proactively lead the conversation.
 
 <h2> Experiences </h2>
 <ul>
@@ -185,8 +186,8 @@
     <strong> Open-Source Projects </strong> <br>
 </p>
 	<ul style="list-style-type:none">
-		<li><a href="https://github.com/iwangjian/Paper-Reading">📖 Paper-Reading</a>: Reading list in dialogue systems, natural language generation and relevant topics.</li>
-		<li><a href="https://github.com/iwangjian/pyloader">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets, supporting PyTorch and TensorFlow. </li>
+		<li><a href="https://github.com/iwangjian/Paper-Reading">📖 Paper-Reading</a>: Reading list in dialogue systems and natural language generation (constantly updating 🤗).</li>
+		<li><a href="https://github.com/iwangjian/pyloader">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets.</li>
 	</ul>
 
 
@@ -195,8 +196,8 @@
 
 	<li> <a href="https://aideadlin.es/?sub=ML,NLP,DM" target="_blank">⏳ AI Conference Deadlines</a>: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines. </li>
 	<li> <a href="https://www.bilibili.com/video/BV18v411n7mr" target="_blank">📝 Writing Perfect Papers</a>: A long talk on how to write perfect papers (by Prof. Baochun Li @UofT). </li>
-	<li> <a href="https://ruder.io/" target="_blank">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog about NLP/ML/DL.</li>
-	<li> <a href="https://lilianweng.github.io/lil-log/" target="_blank">🍑 Lilian Weng's Blog</a>: Deep insights for many DL/NLP problems.</li>
+	<li> <a href="https://ruder.io/" target="_blank">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog with deep insights about NLP/ML/DL.</li>
+	<li> <a href="https://lilianweng.github.io/" target="_blank">🍑 Lilian Weng's Blog</a>:  Lilian Weng's blog with broad learning notes about DL/NLP.</li>
 	<li> <a href="https://jalammar.github.io/" target="_blank">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
 	<li> <a href="https://kexue.fm/" target="_blank">📡 Scientific Spaces</a>: Jianlin Su's blog (in Chinese) about ML|NLP theories with deep explorations.</li>
 	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality" target="_blank">👩‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI. </li>
