--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last update: Jan. 12, 2022
+        <br> &copy; Jian Wang | Last update: May 2022
 		</center>
 	</p>		
 </div>
