--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<h3>PhD Student</h3>
 				<p>
-					QT418, Department of Computing, <br>
+					Department of Computing, <br>
 					The Hong Kong Polytechnic University, <br>
 					Hung Hom, Kowloon, Hong Kong, China <br>
 					<br>
@@ -179,7 +179,7 @@
     <strong>  Conference Reviews </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>COLING'22, EMNLP'21, COLING'20</li>
+		<li>EMNLP'22, COLING'22, EMNLP'21, COLING'20</li>
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
