--- a/index.html
+++ b/index.html
@@ -88,16 +88,20 @@
 </ul>
 
 
-<h2> Publications </h2>
-<p><b>2021</b></p>
+<h2> Selected Publications (<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Full List</a>)</h2> 
+<p><b>Preprint</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		Target-guided Knowledge-aware Recommendation Dialogue System: An Empirical Investigation.<br> 
-		Dongding Lin, <b>Jian Wang</b>, and Wenjie Li. <br> 
-		<i>Knowledge-aware and Conversational Recommender Systems (KaRS) Workshop @ RecSys, 2021.</i> <br>
-		[<a href="http://ceur-ws.org/Vol-2960/paper7.pdf">paper</a>]
+		Follow Me: Conversation Planning for Target-driven Recommendation Dialogue Systems.<br> 
+		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br> 
+		<i>arXiv:2208.03516</i> <br>
+		[<a href="https://arxiv.org/abs/2208.03516">arXiv</a>]
+		[<a href="https://github.com/iwangjian/Plan4RecDial">code</a>]
 	    </p> 
     </li>
+</ul>
+<p><b>2021 and Before</b></p>
+<ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		Template-guided Clarifying Question Generation for Web Search Clarification.<br> 
 		<b>Jian Wang</b> and Wenjie Li. <br> 
@@ -107,9 +111,6 @@
 		[<a href="https://github.com/iwangjian/TG-ClariQ">code</a>]
 	    </p> 
     </li>
-</ul>
-<p><b>2020</b></p>
-<ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems. <br> 
 		<b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
@@ -176,7 +177,7 @@
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
-    <strong>  Conference Reviews </strong> <br> 
+    <strong>  Conference Reviewer </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
 		<li>EMNLP'22, COLING'22, EMNLP'21, COLING'20</li>
@@ -224,7 +225,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last update: May 2022
+        <br> &copy; Jian Wang | Last update: August 2022
 		</center>
 	</p>		
 </div>
