--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		Follow Me: Conversation Planning for Target-driven Recommendation Dialogue Systems.<br> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br> 
-		<i>arXiv:2208.03516</i> <br>
+		<i>arXiv preprint arXiv:2208.03516, 2022</i> <br>
 		[<a href="https://arxiv.org/abs/2208.03516">arXiv</a>]
 		[<a href="https://github.com/iwangjian/Plan4RecDial">code</a>]
 	    </p> 
