--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 <p style="text-align:justify";>
-	I am a first-year PhD student at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a>, 
+	I am a second-year PhD student at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a>, 
 	advised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	Previously, I was a visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a> 
 	from 2018 to 2019, advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>.
