--- a/index.html
+++ b/index.html
@@ -68,27 +68,23 @@
 	</ul>
 </p>
 <p style="text-align:justify";>
-	Recently, I am dedicated to target-driven dialogue systems, with the objective of endowing a system with the ability to 
-	proactively lead the conversation.
+	Recently, I have been dedicated to goal-directed dialogue systems, with the aim of proactively leading a conversation to achieve a pre-determined goal.
 
-<h2> Experiences </h2>
-<ul>
-	<li> 
-		2020/11 - 2021/08: Research assistant at <a href="https://www.polyu.edu.hk/">PolyU</a>
-		(Advisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Maggie Wenjie Li</a>)
-	</li>
-	<li> 
-		2020/07 - 2020/10: Research intern at <a href="https://rul.ai/">Rulai Inc.</a>
-		(Advisor: Dr. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>)
-    </li>
-    <li> 
-		2018/08 - 2019/09: Visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a>
-		(Advisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>)
-	</li>
-</ul>
 
 
 <h2> Selected Publications (<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Full List</a>)</h2> 
+<p><b>2023</b></p>
+<ul>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		COLA: Improving Conversational Recommender Systems by Collaborative Augmentation.<br> 
+		Dongding Lin*, <b>Jian Wang</b>*, and Wenjie Li. &nbsp;&nbsp;&nbsp;&nbsp;(*: Equal Contribution) <br>
+		<i>AAAI Conference on Artificial Intelligence (AAAI), 2023.</i> <br>
+		[<a href="">arXiv</a>](TBA)
+		[<a href="">paper</a>](TBA)
+		[<a href="">code</a>](TBA)
+	    </p> 
+    </li>
+</ul>
 <p><b>Preprint</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
@@ -137,6 +133,23 @@
 	    </p> 
 	</li>
 
+</ul>
+
+
+<h2> Experiences </h2>
+<ul>
+	<li> 
+		2020/11 - 2021/08: Research assistant at <a href="https://www.polyu.edu.hk/">PolyU</a>
+		(Advisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Maggie Wenjie Li</a>)
+	</li>
+	<li> 
+		2020/07 - 2020/10: Research intern at <a href="https://rul.ai/">Rulai Inc.</a>
+		(Advisor: Dr. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>)
+    </li>
+    <li> 
+		2018/08 - 2019/09: Visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a>
+		(Advisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>)
+	</li>
 </ul>
 
 
@@ -208,11 +221,10 @@
 <h2> Misc. </h2>
 <ul>
     <li> <p>
-		  I enjoy Chinese calligraphy and most of outdoor sports (especially basketball, table tennis, badminton). I also 
-		  spend a lot of time on reading and movies. </p> 
+		I enjoy Chinese calligraphy and most outdoor sports (especially basketball, table tennis, and badminton). I also spend my leisure time on variety shows, literature books, and movies.  </p> 
 	</li>
 	<li> <p>
-		I dream to travel around China, I also dream to travel around the world someday.</p> 
+		I dream of traveling around China and many places around the world someday.</p> 
 	</li>
 </ul>
 
@@ -225,7 +237,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last update: August 2022
+        <br> &copy; Jian Wang | Last update: Nov 2022
 		</center>
 	</p>		
 </div>
