--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
 		COLA: Improving Conversational Recommender Systems by Collaborative Augmentation.<br> 
 		Dongding Lin*, <b>Jian Wang</b>*, and Wenjie Li. &nbsp;&nbsp;&nbsp;&nbsp;(*: Equal Contribution) <br>
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2023.</i> <br>
-		[<a href="">arXiv</a>](TBA)
-		[<a href="">paper</a>](TBA)
-		[<a href="">code</a>](TBA)
+		[<a href="https://arxiv.org/abs/2212.07767">arXiv</a>]
+		[<a href="https://github.com/DongdingLin/COLA">code</a>]
 	    </p> 
     </li>
 </ul>
