--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 					The Hong Kong Polytechnic University, <br>
 					Hung Hom, Kowloon, Hong Kong, China <br>
 					<br>
-					<b>Email</b>: <tt>csjiwang@comp.polyu.edu.hk</tt> &nbsp or  &nbsp<tt>jwanglvy@gmail.com</tt> <br>
+					<b>Email</b>: <tt>jian-dylan.wang (at) connect.polyu.hk</tt> &nbsp or <br>
+					&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<tt>jwanglvy (at) gmail.com</tt> <br>
 					<br>
 					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="pic/cv-96.png" height="25px" style="margin-bottom:-3px" >[Curriculum Vitae]</a> &nbsp
 					<a href="https://github.com/iwangjian"><img src="pic/github-96.png" height="25px" style="margin-bottom:-3px">[Github]</a> &nbsp
@@ -57,19 +58,18 @@
 <h2>Research</h2>
 <p style="text-align:justify";>
 	I have broad interests in natural language processing (NLP), particularly in <b>dialogue systems</b> and <b>natural language generation</b>. 
-	As two long-term goals, I expect to achieve:
+	I have the following long-term research goals:
 	<ul>
 	<li> Building practical and intelligent dialogue systems. I am excited about simple and effective approaches that can 
 		be generalizable to real-world conversation scenarios.
 	</li>
-	<li> Developing principled and fundamental methods for natural language generation. I am interested in how human knowledge
-		(e.g., factual, commonsense, etc.) can be reasoned and used in natural language generation.
+	<li> Developing principled methods for natural language generation. I am interested in how human knowledge (e.g., factual, commonsense, etc.) 
+		can be reasoned and used in natural language generation.
 	</li>
 	</ul>
 </p>
 <p style="text-align:justify";>
-	Recently, I have been dedicated to goal-directed dialogue systems, with the aim of proactively leading a conversation to achieve a pre-determined goal.
-
+	Recently, I've become interested in goal-directed dialogue systems, which aim to proactively direct a dialogue toward a pre-determined target.
 
 
 <h2> Selected Publications (<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Full List</a>)</h2> 
@@ -182,8 +182,8 @@
 	<strong> Teaching Assistant</strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>TA for <i>COMP 6709: Advanced Natural Language Processing</i>, Spring 2022, PolyU</li>
-		<li>TA for <i>COMP 2021: Object-Oriented Programming</i>, Fall 2021, PolyU</li>
+		<li>TA for <i>COMP 6709: Advanced Natural Language Processing</i>, Spring 2023 | 2022, PolyU</li>
+		<li>TA for <i>COMP 2021: Object-Oriented Programming</i>, Fall 2022 | 2021, PolyU</li>
 		<li>TA for <i>Design and Analysis of Algorithm</i>, Spring 2018, SCUT</li>
 		<li>TA for <i>Advanced Language Program Design (C++)</i>, Fall 2017, SCUT</li>
 	</ul>
@@ -236,7 +236,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last update: Nov 2022
+        <br> &copy; Jian Wang | Last update: Jan 2023
 		</center>
 	</p>		
 </div>
