--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
 <p><b>2023</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		A Target-driven Planning Approach for Goal-directed Dialogue Systems.<br> 
+		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
+		<i>IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2023.</i> <br>
+		[<a href="">paper</a>] (to appear)
+	    </p> 
+    </li>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		COLA: Improving Conversational Recommender Systems by Collaborative Augmentation.<br> 
 		Dongding Lin*, <b>Jian Wang</b>*, and Wenjie Li. &nbsp;&nbsp;&nbsp;&nbsp;(*: Equal Contribution) <br>
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2023.</i> <br>
