--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	</ul>
 </p>
 <p style="text-align:justify";>
-	Recently, I've become interested in goal-directed dialogue systems, which aim to proactively direct a dialogue toward a pre-determined target.
+	Recently, I've been interested in goal-directed dialogue systems, which aim to proactively direct a dialogue toward a pre-determined target.
 
 
 <h2> Selected Publications (<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Full List</a>)</h2> 
