--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<link rel="shortcut icon" href="myIcon.ico">
+<link rel="shortcut icon" href="">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="keywords" content="Jian Wang, wang jian, iwangjian"> 
 <meta name="description" content="Jian Wang's Homepage">
@@ -200,7 +200,7 @@
     <strong>  Conference Reviewer </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>EMNLP'22, COLING'22, EMNLP'21, COLING'20</li>
+		<li>ACL'23, EMNLP'22, COLING'22, EMNLP'21, COLING'20</li>
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
