--- a/index.html
+++ b/index.html
@@ -68,15 +68,13 @@
 	</li>
 	</ul>
 </p>
-<p style="text-align:justify";>
-	Recently, I've been interested in goal-directed dialogue systems, which aim to proactively direct a dialogue toward a pre-determined target.
 
 
 <h2> Selected Publications (<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en">Full List</a>)</h2> 
 <p><b>2023</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		A Target-driven Planning Approach for Goal-directed Dialog Systems.<br> 
+		<h3>A Target-driven Planning Approach for Goal-directed Dialog Systems</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
 		<i>IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2023.</i> <br>
 		[<a href="https://ieeexplore.ieee.org/document/10042178">paper</a>]
@@ -84,7 +82,7 @@
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		COLA: Improving Conversational Recommender Systems by Collaborative Augmentation.<br> 
+		<h3>COLA: Improving Conversational Recommender Systems by Collaborative Augmentation</h3>
 		Dongding Lin*, <b>Jian Wang</b>*, and Wenjie Li. &nbsp;&nbsp;&nbsp;&nbsp;(*: Equal Contribution) <br>
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2023.</i> <br>
 		[<a href="https://arxiv.org/abs/2212.07767">arXiv</a>]
@@ -95,7 +93,7 @@
 <p><b>Preprint</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		Follow Me: Conversation Planning for Target-driven Recommendation Dialogue Systems.<br> 
+		<h3>Follow Me: Conversation Planning for Target-driven Recommendation Dialogue Systems</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br> 
 		<i>arXiv preprint arXiv:2208.03516, 2022</i> <br>
 		[<a href="https://arxiv.org/abs/2208.03516">arXiv</a>]
@@ -106,7 +104,7 @@
 <p><b>2021 and Before</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		Template-guided Clarifying Question Generation for Web Search Clarification.<br> 
+		<h3>Template-guided Clarifying Question Generation for Web Search Clarification</h3> 
 		<b>Jian Wang</b> and Wenjie Li. <br> 
 		<i>ACM International Conference on Information and Knowledge Management (CIKM), 2021.</i> <br>
 		[<a href="https://dl.acm.org/doi/10.1145/3459637.3482199">paper</a>]
@@ -115,7 +113,7 @@
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems. <br> 
+		<h3>Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems</h3> 
 		<b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 		<i>International Conference on Computational Linguistics (COLING), 2020.</i> <br>
 		[<a href="https://www.aclweb.org/anthology/2020.coling-main.362">paper</a>]
@@ -123,7 +121,7 @@
 	    </p> 
     </li>
     <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-            Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering.<br> 
+            <h3>Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering</h3> 
             <b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 	        <i>AAAI Conference on Artificial Intelligence (AAAI), 2020.</i> <br>
 			[<a href="https://arxiv.org/abs/1912.07491">arXiv</a>]
@@ -132,7 +130,7 @@
 	    </p> 
 	</li>	
     <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-            Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts. <br> 
+            <h3>Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</h3> 
             <b>Jian Wang</b>, Kejing He, and Min Yang.<br> 
 	        <i>International Journal of Machine Learning and Cybernetics (JMLC), 2020.</i> <br>
 			[<a href="https://doi.org/10.1007/s13042-020-01133-3">paper</a>]
@@ -190,10 +188,10 @@
 	<strong> Teaching Assistant</strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>TA for <i>COMP 6709: Advanced Natural Language Processing</i>, Spring 2023 | 2022, PolyU</li>
-		<li>TA for <i>COMP 2021: Object-Oriented Programming</i>, Fall 2022 | 2021, PolyU</li>
-		<li>TA for <i>Design and Analysis of Algorithm</i>, Spring 2018, SCUT</li>
-		<li>TA for <i>Advanced Programming Language (C++)</i>, Fall 2017, SCUT</li>
+		<li>COMP 6709: Advanced Natural Language Processing, Spring 2023 | 2022, PolyU</li>
+		<li>COMP 2021: Object-Oriented Programming, Fall 2022 | 2021, PolyU</li>
+		<li>Design and Analysis of Algorithm, Spring 2018, SCUT</li>
+		<li>Advanced Programming Language (C++), Fall 2017, SCUT</li>
 	</ul>
 	
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
