--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 	        <i>AAAI Conference on Artificial Intelligence (AAAI), 2020.</i> <br>
 			[<a href="https://arxiv.org/abs/1912.07491">arXiv</a>]
-			[<a href="https://aaai.org/ojs/index.php/AAAI/article/view/6453">paper</a>]
+			[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/6453">paper</a>]
 		    [<a href="https://github.com/siat-nlp/TransDG">code</a>] 
 	    </p> 
 	</li>	
